<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.ssssssss</groupId>
        <artifactId>magic-api-parent</artifactId>
        <version>2.2.2</version>
    </parent>
    <artifactId>magic-api-lsp</artifactId>
    <packaging>jar</packaging>
    <name>magic-api-lsp</name>
    <description>Language Server Protocol implementation for magic-api</description>

    <properties>
        <java.version>1.8</java.version>
        <lsp4j.version>0.21.1</lsp4j.version>
    </properties>

    <dependencies>
        <!-- Magic API Core -->
        <dependency>
            <groupId>org.ssssssss</groupId>
            <artifactId>magic-api</artifactId>
        </dependency>
        
        <!-- Magic Script Engine -->
        <dependency>
            <groupId>org.ssssssss</groupId>
            <artifactId>magic-script</artifactId>
            <version>${magic-script.version}</version>
        </dependency>

        <!-- LSP4J Dependencies -->
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j.debug</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.eclipse.lsp4j</groupId>
            <artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
            <version>${lsp4j.version}</version>
        </dependency>

        <!-- Spring Boot (Optional, for standalone server) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>